syntax = "proto3";

service BlogService {
    rpc FetchArticles(ListArticleRequest) returns (ArticleResult);
    rpc CreateArticle(Article) returns (ArticleResult);
    rpc DeleteArticle(Article) returns (ArticleResult);
    rpc UpdateArticle(Article) returns (ArticleResult);


    // rpc FetchCategories(ListCategoryRequest) returns (CategoryResult);
    // rpc CreateCategory(Category) returns (CategoryResult);
    // rpc DeleteCategory(Category) returns (CategoryResult);
}

message ListArticleRequest {}

message Article {
    int64 id = 1;
    string title = 2;
    string content = 3;
    Author author = 4;
    string created_at = 5;
    string updated_at = 6;
}

message Author {
    int64 id = 1;
}

message ArticleResult {
    int32 status_code = 1;
    string message = 2;

    Article article = 3;
    repeated Article articles = 4;
}

message ListCategoryRequest {}

message Category {
    int64 id = 1;
    string name = 2;
    string color = 3;
    string created_at = 5;
    string updated_at = 6;
}

message CategoryResult {
    int32 status_code = 1;
    string message = 2;

    repeated Category categories = 3;
}